--- a/ScanningApp/Storyboards/Base.lproj/Main.storyboard
+++ b/ScanningApp/Storyboards/Base.lproj/Main.storyboard
@@ -29,6 +29,25 @@
                                     <outletCollection property="gestureRecognizers" destination="pZZ-aW-8Uv" appends="YES" id="3Py-z9-IPG"/>
                                 </connections>
                             </arscnView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ky8-eY-0LO" userLabel="Blur View">
+                                <rect key="frame" x="67" y="342" width="240" height="128"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hey-0G-jup">
+                                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <button opaque="NO" alpha="0.5" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p0C-F0-p11" userLabel="Next Button Touch Area">
+                                <rect key="frame" x="291" y="695" width="84" height="83"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="7jT-Ny-6s9"/>
+                                    <constraint firstAttribute="width" constant="130" id="jpI-M9-4tV"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="nextButtonTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Bvs-GU-PQ0"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Emj-yh-Wao" userLabel="Next Button" customClass="RoundedButton" customModule="ScanningApp" customModuleProvider="target">
                                 <rect key="frame" x="137.66666666666666" y="693" width="100" height="45"/>
                                 <constraints>
@@ -40,8 +59,20 @@
                                     <action selector="nextButtonTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="37x-d3-hp6"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" alpha="0.5" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MRb-bZ-YPJ" userLabel="? Button Touch Area">
+                                <rect key="frame" x="291" y="695" width="84" height="83"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="EAP-nv-62L"/>
+                                    <constraint firstAttribute="height" constant="130" id="ifq-hV-oWh"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="toggleInstructionsButtonTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="mbh-tB-lk5"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bG7-IC-Bnx" userLabel="? Button" customClass="RoundedButton" customModule="ScanningApp" customModuleProvider="target">
-                                <rect key="frame" x="323" y="699.66666666666663" width="32" height="32"/>
+                                <rect key="frame" x="310" y="693" width="45" height="45"/>
+                                <accessibility key="accessibilityConfiguration" label="Toggle instruction label"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="45" id="934-S4-2JQ"/>
                                     <constraint firstAttribute="height" constant="45" id="Eu7-e9-p3y"/>
@@ -54,6 +85,17 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="toggleInstructionsButtonTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="FKw-vC-XiO"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvw-kB-ETJ" userLabel="Left Button Touch Area">
+                                <rect key="frame" x="0.0" y="688" width="90" height="90"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="9dq-lj-jho"/>
+                                    <constraint firstAttribute="width" constant="130" id="sTS-zp-hUS"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="leftButtonTouchAreaTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="M0k-nb-Gbb"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OaE-RQ-EVR" userLabel="Load Model" customClass="RoundedButton" customModule="ScanningApp" customModuleProvider="target">
@@ -83,7 +125,7 @@
                                 </connections>
                             </button>
                             <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EiA-XD-X8R" userLabel="Session Info View">
-                                <rect key="frame" x="20" y="108" width="191" height="38"/>
+                                <rect key="frame" x="92" y="108" width="191" height="38"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="g0f-IE-Nfz">
                                     <rect key="frame" x="0.0" y="0.0" width="191" height="38"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -176,17 +218,24 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ky8-eY-0LO" secondAttribute="trailing" id="2rL-yM-S0T"/>
+                            <constraint firstItem="t88-em-YKH" firstAttribute="bottom" secondItem="MRb-bZ-YPJ" secondAttribute="bottom" constant="-40" id="4ua-0K-uku"/>
                             <constraint firstItem="t88-em-YKH" firstAttribute="trailing" secondItem="bG7-IC-Bnx" secondAttribute="trailing" constant="20" id="5o9-k1-HSq"/>
                             <constraint firstItem="t88-em-YKH" firstAttribute="bottom" secondItem="Emj-yh-Wao" secondAttribute="bottom" constant="40" id="6IO-iI-wwJ"/>
                             <constraint firstItem="zK5-Be-vZh" firstAttribute="width" secondItem="t88-em-YKH" secondAttribute="width" id="7Zm-Go-Xz3"/>
+                            <constraint firstItem="p0C-F0-p11" firstAttribute="centerX" secondItem="t88-em-YKH" secondAttribute="centerX" id="8Lt-iO-P62"/>
                             <constraint firstItem="bG7-IC-Bnx" firstAttribute="centerY" secondItem="Emj-yh-Wao" secondAttribute="centerY" id="A5n-C9-kh3"/>
+                            <constraint firstItem="ky8-eY-0LO" firstAttribute="top" secondItem="hbm-Ig-0N9" secondAttribute="top" id="AYo-ni-f8r"/>
                             <constraint firstItem="Emj-yh-Wao" firstAttribute="centerX" secondItem="v9e-Pw-pdM" secondAttribute="centerX" id="D4T-6j-WtY"/>
                             <constraint firstItem="zK5-Be-vZh" firstAttribute="centerX" secondItem="t88-em-YKH" secondAttribute="centerX" id="DCL-X1-fgg"/>
+                            <constraint firstItem="nvw-kB-ETJ" firstAttribute="leading" secondItem="t88-em-YKH" secondAttribute="leading" id="Drv-NV-JaG"/>
                             <constraint firstItem="v9e-Pw-pdM" firstAttribute="centerY" secondItem="hbm-Ig-0N9" secondAttribute="centerY" id="FfW-Il-YPe"/>
                             <constraint firstItem="scL-hQ-G7O" firstAttribute="top" secondItem="v9e-Pw-pdM" secondAttribute="top" id="Fut-cH-YCF"/>
+                            <constraint firstItem="t88-em-YKH" firstAttribute="bottom" secondItem="nvw-kB-ETJ" secondAttribute="bottom" constant="-40" id="Hc6-Xc-Msf"/>
                             <constraint firstItem="Ug5-TJ-D8K" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="t88-em-YKH" secondAttribute="leading" constant="20" id="Ngj-RI-Qs5">
                                 <variation key="widthClass=regular" constant="120"/>
                             </constraint>
+                            <constraint firstItem="t88-em-YKH" firstAttribute="trailing" secondItem="MRb-bZ-YPJ" secondAttribute="trailing" id="NmW-HE-dfY"/>
                             <constraint firstItem="Ug5-TJ-D8K" firstAttribute="centerX" secondItem="t88-em-YKH" secondAttribute="centerX" id="RDX-jU-pV5"/>
                             <constraint firstItem="ZkM-BT-CgT" firstAttribute="centerY" secondItem="Emj-yh-Wao" secondAttribute="centerY" id="SZm-xA-iCk"/>
                             <constraint firstItem="t88-em-YKH" firstAttribute="bottom" secondItem="Ug5-TJ-D8K" secondAttribute="bottom" constant="135" id="StB-Vx-2up"/>
@@ -196,19 +245,23 @@
                             <constraint firstItem="EiA-XD-X8R" firstAttribute="top" secondItem="scL-hQ-G7O" secondAttribute="bottom" constant="20" id="Xsk-nI-QsO"/>
                             <constraint firstItem="v9e-Pw-pdM" firstAttribute="centerX" secondItem="hbm-Ig-0N9" secondAttribute="centerX" id="aX3-KZ-VYB"/>
                             <constraint firstItem="OaE-RQ-EVR" firstAttribute="centerY" secondItem="Emj-yh-Wao" secondAttribute="centerY" id="cCm-hD-zWE"/>
+                            <constraint firstItem="t88-em-YKH" firstAttribute="bottom" secondItem="p0C-F0-p11" secondAttribute="bottom" constant="-40" id="cR0-rT-ueR"/>
                             <constraint firstItem="v9e-Pw-pdM" firstAttribute="height" secondItem="hbm-Ig-0N9" secondAttribute="height" id="g6e-2x-u2t"/>
                             <constraint firstItem="OaE-RQ-EVR" firstAttribute="leading" secondItem="t88-em-YKH" secondAttribute="leading" constant="20" id="q27-oD-8Zk"/>
                             <constraint firstItem="zK5-Be-vZh" firstAttribute="top" secondItem="t88-em-YKH" secondAttribute="top" id="r4S-tX-33y"/>
                             <constraint firstItem="ZkM-BT-CgT" firstAttribute="leading" secondItem="t88-em-YKH" secondAttribute="leading" constant="20" id="vcZ-h5-BRh"/>
                             <constraint firstItem="v9e-Pw-pdM" firstAttribute="width" secondItem="hbm-Ig-0N9" secondAttribute="width" id="vqB-3v-7S6"/>
                             <constraint firstItem="scL-hQ-G7O" firstAttribute="bottom" secondItem="zK5-Be-vZh" secondAttribute="bottom" id="x1a-Rl-85p"/>
+                            <constraint firstAttribute="bottom" secondItem="ky8-eY-0LO" secondAttribute="bottom" id="zEJ-K4-NgF"/>
                             <constraint firstItem="t88-em-YKH" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ug5-TJ-D8K" secondAttribute="trailing" constant="20" id="zTR-DE-sJ6">
                                 <variation key="widthClass=regular" constant="120"/>
                             </constraint>
+                            <constraint firstItem="ky8-eY-0LO" firstAttribute="leading" secondItem="hbm-Ig-0N9" secondAttribute="leading" id="zlH-3F-1ed"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="t88-em-YKH"/>
                     </view>
                     <connections>
+                        <outlet property="blurView" destination="ky8-eY-0LO" id="XLB-N9-dSP"/>
                         <outlet property="flashlightButton" destination="ZkM-BT-CgT" id="Le2-OU-xfN"/>
                         <outlet property="instructionLabel" destination="xZB-0J-nhW" id="qV9-M7-Lrg"/>
                         <outlet property="instructionView" destination="Ug5-TJ-D8K" id="gzu-p2-19I"/>
